--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "nltk>=3.8.0",
     "scikit-learn>=1.3.0",
     "python-dotenv>=1.0.0",
+    "pymongo>=4.6.0",
 ]
 
 [build-system]
